--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "vue-color": "^2.7.0"
+    "vue-color": "^2.7.0",
+    "vue-router": "^3.1.2"
   },
   "browserslist": [
     "> 1%",
@@ -26,6 +27,8 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.2.0",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
